--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -556,6 +556,9 @@ if(NOT HEADLESS)
     endif()
 
     find_package(Qt6QScintilla 2.8.0 REQUIRED QUIET)
+    message(STATUS "QT6QSCINTILLA_LIBRARY: ${QT6QSCINTILLA_LIBRARY}")
+    message(STATUS "QT6QSCINTILLA_INCLUDE_DIRS: ${QT6QSCINTILLA_INCLUDE_DIRS}")
+    target_include_directories(OpenSCAD PRIVATE "${QT6QSCINTILLA_INCLUDE_DIRS}/..")
     message(STATUS "QScintilla: ${QT6QSCINTILLA_VERSION_STRING}")
 
     if(ENABLE_QTDBUS)
@@ -585,6 +588,9 @@ if(NOT HEADLESS)
     endif()
 
     find_package(Qt5QScintilla 2.8.0 REQUIRED QUIET)
+    message(STATUS "QT5QSCINTILLA_LIBRARY: ${QT5QSCINTILLA_LIBRARY}")
+    message(STATUS "QT5QSCINTILLA_INCLUDE_DIRS: ${QT5QSCINTILLA_INCLUDE_DIRS}")
+    target_include_directories(OpenSCAD PRIVATE "${QT5QSCINTILLA_INCLUDE_DIRS}/..")
     message(STATUS "QScintilla: ${QT5QSCINTILLA_VERSION_STRING}")
 
     if(ENABLE_QTDBUS)
